--- a/chords.ui
+++ b/chords.ui
@@ -301,6 +301,18 @@
           </packing>
         </child>
         <child>
+          <object class="GtkDrawingArea" id="waveformArea">
+            <property name="height_request">130</property>
+            <property name="visible">True</property>
+            <property name="can_focus">False</property>
+          </object>
+          <packing>
+            <property name="expand">True</property>
+            <property name="fill">True</property>
+            <property name="position">2</property>
+          </packing>
+        </child>
+        <child>
           <object class="GtkScale" id="slider">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
@@ -308,9 +320,9 @@
             <property name="draw_value">False</property>
           </object>
           <packing>
-            <property name="expand">True</property>
+            <property name="expand">False</property>
             <property name="fill">True</property>
-            <property name="position">2</property>
+            <property name="position">3</property>
           </packing>
         </child>
         <child>
@@ -347,7 +359,6 @@
                           <object class="GtkScale" id="zoomSlider">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
-                            <property name="show_fill_level">True</property>
                             <property name="round_digits">1</property>
                             <property name="draw_value">False</property>
                           </object>
@@ -507,7 +518,7 @@
           <packing>
             <property name="expand">False</property>
             <property name="fill">True</property>
-            <property name="position">3</property>
+            <property name="position">4</property>
           </packing>
         </child>
       </object>
