--- a/chords.ui
+++ b/chords.ui
@@ -204,10 +204,11 @@
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <child>
-                      <object class="GtkLabel" id="speedLabel">
-                        <property name="visible">True</property>
-                        <property name="can_focus">False</property>
+                      <object class="GtkToggleButton" id="speedButton">
                         <property name="label" translatable="yes">Speed</property>
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                        <property name="receives_default">True</property>
                       </object>
                       <packing>
                         <property name="expand">False</property>
